anchor-login-be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anchor-login-be
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: anchor-login-be
  template:
    metadata:
      labels:
        app: anchor-login-be
    spec:
      containers:
        - name: anchor-login-be
          image: 438282170065.dkr.ecr.ap-northeast-2.amazonaws.com/anchor-login-be:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
          httpGet:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 3
---



apiVersion: v1
kind: Service
metadata:
  name: anchor-login-be
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/api/v1"
spec:
  selector:
    app: anchor-login-be
  type: NodePort
  ports:
    - port: 8080 # 서비스가 생성할 포트  
      targetPort: 8080 # 서비스가 접근할 pod의 포트
      protocol: TCP
