custom-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-nginx
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: custom-nginx
  template:
    metadata:
      labels:
        app: custom-nginx
    spec:
      containers:
        - name: custom-nginx
          image: 438282170065.dkr.ecr.ap-northeast-2.amazonaws.com/custom-nginx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---



apiVersion: v1
kind: Service
metadata:
  name: custom-nginx
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: custom-nginx
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 443
