ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "backend-ingress"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:438282170065:certificate/5d09dc60-0ae9-4230-b32b-5083cdc0b019
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    #alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    #alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  finalizers:
  - ingress.k8s.aws/resources
spec:
  rules:
  - host: anchorcomics.net
    http:
      paths:
      - path: /api/v1
        pathType: ImplementationSpecific
        backend:
          service:
            name: "anchor-login-be"
            port:
              number: 8080
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: "anchor-book-be"
            port:
                number: 9090
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: "custom-nginx"
            port:
              number: 80
